Bug 363168 - lack of appstream data should cause user visible warning
Summary: lack of appstream data should cause user visible warning
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: PackageKit (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Aleix Pol
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-05-17 09:00 UTC by Harald Sitter
Modified: 2016-05-17 10:55 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Harald Sitter 2016-05-17 09:00:04 UTC
it can occur that appstream data is unavailable for whatever reason. in such a case a user visible message should be raised somehow to inform them that their system is broken.

Reproducible: Always
Comment 1 Aleix Pol 2016-05-17 10:55:12 UTC
Git commit 608ac26c7d53c50c570e6436a5b8f27e6fda8755 by Aleix Pol.
Committed on 17/05/2016 at 10:53.
Pushed by apol into branch 'master'.

Don't assert that the appstream db is present

We show an error message already.

M  +0    -1    libdiscover/backends/PackageKitBackend/PackageKitBackend.cpp

http://commits.kde.org/discover/608ac26c7d53c50c570e6436a5b8f27e6fda8755