Don't assert that the appstream db is present

We show an error message already.

BUG: 363168